--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,3 +50,7 @@ path = "examples/handler_pattern.rs"
 [[example]]
 name = "dynamic_dispatch"
 path = "examples/dynamic_dispatch.rs"
+
+[[example]]
+name = "new_api_demo"
+path = "examples/new_api_demo.rs"
