Add documentation infrastructure and development tooling
- Set up Starlight documentation site with Astro
- Add GitHub Actions workflow for documentation deployment
- Create comprehensive documentation structure:
  * Installation and quick start guides
  * Core concepts (actors, messages)
  * API reference for two-step messaging
  * Migration guide from legacy API
  * Examples and usage patterns

- Add development tooling:
  * justfile for common development tasks
  * Updated .gitignore for docs and build artifacts

- Remove outdated documentation files:
  * TODO.md and link_api_analysis.md (replaced by proper docs)
  * POC files no longer needed

Documentation provides complete coverage of the Actor12 framework
with examples, guides, and API references.

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,11 @@ node_modules/
 
 # TernJS port file
 .tern-port
+
+# Documentation build artifacts
+docs/dist/
+docs/.astro/
+docs/node_modules/
+
+# History cleaning script (sensitive - can rewrite git history)
+scripts/clean-history.ts
