--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ edition = "2024"
 name = "actor12"
 version = "0.0.4"
 description = "A lightweight actor framework for Rust with async support"
-documentation = "https://docs.rs/runy-actor"
+documentation = "https://docs.rs/actor12"
 repository = "https://github.com/s-panferov/actor12"
 license = "MIT"
 
